# python-currency-converter-homework-skeleton

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
src/currency_converter/: __init__.py  cli.py  converter.py  currency_pairs.py  gui.py
tests/: test_chf_to_eur.py
